[package]
name = "pdf-doc"
version = "0.1.2"
edition = "2021"
authors = ["Rana Ian"]
description = "Create a writing document and save to PDF with Rust."
documentation = "https://docs.rs/pdf-doc"
readme = "README.md"
keywords = ["pdf", "document", "pdf-document", "text", "json"]
categories = ["text-editors", "text-processing"]
license = "MIT"
repository = "https://github.com/rana/pdf-doc"

[dependencies]
google-fonts = { version = "0.1.5" }
heck = "0.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
skia-safe = { version = "0.75.0", features = ["textlayout"] }
